# OpenAuntie

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
adapters/: __init__.py  chatgpt_system_prompt.txt  generate.py  manifest.py
adapters/output/: claude_desktop_config.json
docs/: changelog.md  contributing.md  faq.md  privacy.md
docs/examples/: homework-struggles.md  new-baby-sibling.md  screen-time-negotiation.md  sibling-fighting.md  week-in-the-life.md
docs/guides/: allowance-setup.md  asking-auntie.md  bedtime-routines.md  emotion-tracking.md  family-meetings.md  getting-started.md  homework-help.md  improving-openauntie.md  morning-routines.md  setting-up-points.md  vacation-points.md
docs/reference/: architecture.md  (+2 more)
knowledge/: behavior_systems.md  collaborative_problem_solving.md  consultant_personality.md  developmental_stages.md  emotion_coaching.md  evidence_based_scripts.md  family_communication.md  financial_literacy.md  homework_and_learning.md  parental_wellbeing.md  positive_discipline.md  red_flags.md  routines_research.md  screen_time.md  sibling_dynamics.md
mcp_server/: __init__.py  run_server.py  server.py
tests/: conftest.py  test_activity_service.py  test_behavior_service.py  test_consultant_service.py  test_education_service.py  test_emotional_service.py  test_family_service.py  test_feedback_service.py  test_financial_service.py  test_health_service.py  test_journal_service.py  test_research_service.py  test_routine_service.py  test_storage.py
(+40 files in other folders)
